# documents-photoholmes

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CVPR_NOTES.md  README.md  STATUS.md  TODO.md  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-torch.txt  requirements.cpu.txt  requirements.txt  research.py
benchmark/: cli.py  config.example.yaml  model.py  prepare_outputs.py
examples/: benchmarking_a_method.ipynb
notebooks/: benchmarking_a_method.ipynb  documents.ipynb  run-psccnet.py  run-trufor.py
photoholmes/models/: __init__.py  base.py
photoholmes/utils/: image.py
psccnet_output/: canong3_canonxt_sub_01_psccnet_detection.txt
research/: 09-11.py  20230911_naive_pipeline.py  20230917_dq_tests.py  20230917_gaussian_mixtures.py  20230920_dq.py  20230930_dq_pipeline.py  20230930_jpeg_inputs.py  20231003_dq_tests.py  20231013_omegaconf_tests.py
research/adaptive_cfa_net/: 20240225_refactor.py  20240226_from_config.py
research/benchmark/: 20231118_factories.py  20231215_end_to_end.py  20231231_new_benchmark_structure.py  20240114_run.py  20240115_run_all_datasets.py  20240122_logging_research.py  20240308_refactor.py  20240324_run_all_datasets.py
research/catnet/: 20231015_catnet_dataload.py  20231015_catnet_default_config.py  20231015_catnet_structure.py  20231017_catnet_wrapper.py  20231021_config_casting.py
research/cfa/: 20231108_structure.py  20231112_method_tests.py  20231112_preprocessing.py
scripts/: autosplice.py  coverage.py  download_psccnet_weights.py  dso1.py
src/: research-09-11.py
(+317 files in other folders)
